--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Header/navbar -->
 	<header class="sticky-top navigation">
   		<div class=container>
-   			<nav class="navbar navbar-expand-lg navbar-light" style="background-color: black;">
+   			<nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
       			<a class=navbar-brand href="index.html">
       				<img class="img-fluid" src="images/logo1.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
       			</a>
