--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/themify-icons.css">
+	
 </head>
 <body>
 <!-- Header/navbar -->
-	<header class="sticky-top navigation">
-  		<div class=container>
-   			<nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
-      			<a class=navbar-brand href="index.html">
+	
+   			<nav class="navbar navbar-expand-lg navbar-light">
+      			<a class="navbar-brand mb-0 h1" href="index.html">
       				<img class="img-fluid" src="images/logo1.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
       			</a>
-      			<button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation">
-        			<i class="ti-align-right h4 text-dark"></i>
+      			<button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        			<img class="img-fluid" src="images/icon.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
         		</button>
-      		<div class="collapse navbar-collapse text-center" id=navigation>
+      		<div class="collapse navbar-collapse text-center" id=navbarNavDropdown>
 		        <ul class="navbar-nav mx-auto align-items-center">
 		          	<li class="nav-item"><a class="nav-link" href="index-2.html">Facebook</a></li>
 		          	<li class="nav-item"><a class="nav-link" href="list.html">Instagram</a></li>
@@ -29,8 +29,8 @@
 
       		</div>
     		</nav>
-  		</div>
-	</header>
+  		
+<!-- end Header/Navbar-->
 
 	<section class="section pb-0" style="background-color: #e6e6e6;">
 	  <div class="container">
