--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!-- Header/navbar -->
-	
+	<div class="fixed-top" style="background-color: white;">
    			<nav class="navbar navbar-expand-lg navbar-light">
       			<a class="navbar-brand mb-0 h1" href="index.html">
       				<img class="img-fluid" src="images/logo1.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
@@ -29,11 +29,12 @@
 
       		</div>
     		</nav>
+    </div>
   		
 <!-- end Header/Navbar-->
 
 	<section class="section pb-0" style="background-color: #e6e6e6;">
-	  <div class="container">
+	  <div class="container" id="topcontainer">
 	    <div class="row justify-content-between align-items-center">
 	      <div class="col-lg-7 text-center text-lg-left">
 	        <h1 class="mb-4">Documentation granola.tn :</h1>
@@ -49,13 +50,14 @@
 <!--products-->
 	<section class="section pb-0" id="products">
 	  <div class="container">
+	  	<br>
 	    <h2 class="section-title">Products</h2>
 	    <div class="row">
-	      <!-- topic -->
+	      <!-- produit 1 -->
 	      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
 	        <div class="card match-height">
+	        	<img src="images/logo.png" class="card-img-top" alt="...">
 	          <div class="card-body">
-	            <i class="card-icon ti-panel mb-4"></i>
 	            <h3 class="card-title h4">Normale & Economique</h3>
 	            <p class="card-text">Quantité : 200g</p>
 	            <p class="card-text">prix : 8,5 DT</p>
@@ -63,11 +65,11 @@
 	          </div>
 	        </div>
 	      </div>
-	      <!-- topic -->
+	      <!-- produit 2 -->
 	      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
 	        <div class="card match-height">
+	        	<img src="images/logo.png" class="card-img-top" alt="...">
 	          <div class="card-body">
-	            <i class="card-icon ti-credit-card mb-4"></i>
 	            <h3 class="card-title h4">Normale & Economique</h3>
 	            <p class="card-text">Quantité : 200g</p>
 	            <p class="card-text">prix : 8,5 DT</p>
@@ -75,11 +77,11 @@
 	          </div>
 	        </div>
 	      </div>
-	      <!-- topic -->
+	      <!-- produit 3 -->
 	      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
 	        <div class="card match-height">
+	        	<img src="images/logo.png" class="card-img-top" alt="...">
 	          <div class="card-body">
-	            <i class="card-icon ti-package mb-4"></i>
 	            <h3 class="card-title h4">Normale & Economique</h3>
 	            <p class="card-text">Quantité : 200g</p>
 	            <p class="card-text">prix : 8,5 DT</p>
@@ -87,11 +89,11 @@
 	          </div>
 	        </div>
 	      </div>
-	      <!-- topic -->
+	      <!-- produit 4 -->
 	      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
 	        <div class="card match-height">
+	        	<img src="images/logo.png" class="card-img-top" alt="...">
 	          <div class="card-body">
-	            <i class="card-icon ti-settings mb-4"></i>
 	            <h3 class="card-title h4">Normale & Economique</h3>
 	            <p class="card-text">Quantité : 200g</p>
 	            <p class="card-text">prix : 8,5 DT</p>
@@ -104,6 +106,19 @@
 	</section>
 	<!-- /topics -->
 
+
+
+
+	<footer class="text-muted py-5">
+		<div class="container">
+		    <p class="float-end mb-1">
+		    	<a href="#topcontainer">Back to top</a>
+		    </p>
+		    <p class="mb-1">GRANOLA ça cache toujours quelque chose d'EXTRA !</p>
+		    <p class="mb-0">New customer and you want to try our product!   <a href="./form.html">order your products  </a> or read our <a href="./about.html"> “Granola” advantages. </a></p>
+		</div>
+
+	</footer>
 
 
 
