--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
 </head>
 <body>
 <!-- Header/navbar -->
-	<div class="fixed-top" style="background-color: white;">
-   			<nav class="navbar navbar-expand-lg navbar-light">
-      			<a class="navbar-brand mb-0 h1" href="index.html">
-      				<img class="img-fluid" src="images/logo1.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
-      			</a>
-      			<button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        			<img class="img-fluid" src="images/icon.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
-        		</button>
-      		<div class="collapse navbar-collapse text-center" id=navbarNavDropdown>
-		        <ul class="navbar-nav mx-auto align-items-center">
-		          	<li class="nav-item"><a class="nav-link" href="index-2.html">Facebook</a></li>
-		          	<li class="nav-item"><a class="nav-link" href="list.html">Instagram</a></li>
-		        </ul>
-		        <a href="#products" class="btn btn-sm btn-outline-primary ml-lg-4">Produits</a>
-		        <a href="Contact.html" class="btn btn-sm btn-outline-primary ml-lg-4">Contact</a>
-		        <a href="form.html" class="btn btn-sm btn-outline-primary ml-lg-4">Commander</a>
+	
+   			<nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: white;">
+   				
+	      			<a class="navbar-brand mb-0 h1" href="index.html">
+	      				<img class="img-fluid" src="images/logo1.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
+	      			</a>
+	      			<button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+	        			<img class="img-fluid" src="images/icon.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
+	        		</button>
+		      		<div class="collapse navbar-collapse text-center" id=navbarNavDropdown>
+				        <ul class="navbar-nav mx-auto align-items-center">
+				          	<li class="nav-item"><a class="nav-link" href="index-2.html">Facebook</a></li>
+				          	<li class="nav-item"><a class="nav-link" href="list.html">Instagram</a></li>
+				        </ul>
+				        <a href="#products" class="btn btn-sm btn-outline-primary ml-lg-4">Produits</a>
+				        <a href="Contact.html" class="btn btn-sm btn-outline-primary ml-lg-4">Contact</a>
+				        <a href="form.html" class="btn btn-sm btn-outline-primary ml-lg-4">Commander</a>
 
-      		</div>
+		      		</div>
     		</nav>
-    </div>
+
   		
 <!-- end Header/Navbar-->
 
