--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 	
 </head>
 <body>
+
 <!-- Header/navbar -->
 	
-   			<nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: white;">
+   			<nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
    				
 	      			<a class="navbar-brand mb-0 h1" href="index.html">
 	      				<img class="img-fluid" src="images/logo1.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
@@ -21,25 +22,55 @@
 	        		</button>
 		      		<div class="collapse navbar-collapse text-center" id=navbarNavDropdown>
 				        <ul class="navbar-nav mx-auto align-items-center">
-				          	<li class="nav-item"><a class="nav-link" href="index-2.html">Facebook</a></li>
-				          	<li class="nav-item"><a class="nav-link" href="list.html">Instagram</a></li>
+				          	<li class="nav-item"><a class="nav-link" href="https://www.facebook.com/granola.tn">Facebook</a></li>
+				          	<li class="nav-item"><a class="nav-link" href="#">Instagram</a></li>
 				        </ul>
 				        <a href="#products" class="btn btn-sm btn-outline-primary ml-lg-4">Produits</a>
 				        <a href="Contact.html" class="btn btn-sm btn-outline-primary ml-lg-4">Contact</a>
-				        <a href="form.html" class="btn btn-sm btn-outline-primary ml-lg-4">Commander</a>
+				        <a href="./form.html" class="btn btn-sm btn-outline-primary ml-lg-4">Commander</a>
 
 		      		</div>
     		</nav>
 
-  		
 <!-- end Header/Navbar-->
 
-	<section class="section pb-0" style="background-color: #e6e6e6;">
+
+
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+	  <div class="carousel-inner">
+	    <div class="carousel-item active">
+	      <img class="d-block w-100" src="images/slide1.jpg" alt="First slide">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100" src="images/slide2.webp" alt="Second slide">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100" src="images/slide3.jpg" alt="Third slide">
+	    </div>
+	  </div>
+	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Next</span>
+	  </a>
+	</div>
+
+
+
+
+
+	<section class="section pb-0" style="background-color: white;">
 	  <div class="container" id="topcontainer">
 	    <div class="row justify-content-between align-items-center">
 	      <div class="col-lg-7 text-center text-lg-left">
-	        <h1 class="mb-4">Documentation granola.tn :</h1>
-	        <p class="mb-4">Lorem ipsum dolor amet, consetetur sadiffspscing elitr, diam nonumy invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua At.</p>
+	        <h1 class="mb-4">Documentation "Granola" :</h1>
+	        <p class="mb-4">Une céréale complète, La base du Granola : il s’agit généralement de l’avoine, pour son apport en sucres lents, protéines, fibres et lipides, ce qui évite un coup de pompe dans la matinée, tout en garantissant un effet de satiété anti-grignotages. L’avantage des sucres lents, ou glucides complexes, est leur assimilation progressive par l’organisme, ce qui lui procure de l’énergie sur une plus longue période. Les protéines quant à elles sont rassasiantes.  Vous pouvez mélanger les céréales à la base de Granola : sarrasin, flocons de quinoa, de millet…</p>
+	        <p>Des oléagineux : amandes, noix, noisettes… Ils contiennent des oméga 3, acides gras essentiels, des oligoéléments (calcium, magnésium, zinc), des vitamines, des fibres et des protéines.</p>
+	        <p>Un sucrant naturel : du miel, qui contient des vitamines, aide à lutter contre les infections et améliore la digestion.</p>
 	      </div>
 	      <div class="col-lg-4 d-lg-block">
 	        <img src="images/logo.png" alt="illustration" class="img-fluid">
@@ -47,6 +78,16 @@
 	    </div>
 	  </div>
 	</section>
+
+
+
+
+	
+
+
+
+
+
 
 <!--products-->
 	<section class="section pb-0" id="products">
@@ -109,7 +150,7 @@
 
 
 
-
+<!-- footer-->
 	<footer class="text-muted py-5">
 		<div class="container">
 		    <p class="float-end mb-1">
@@ -120,7 +161,7 @@
 		</div>
 
 	</footer>
-
+<!-- end /footer-->
 
 
 
