--- a/test.html
+++ b/test.html
@@ -6,49 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/themify-icons.css">
+  
 </head>
 <body>
 <!-- Header/navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: white;">
+          
+              <a class="navbar-brand mb-0 h1" href="index.html">
+                <img class="img-fluid" src="images/logo1.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
+              </a>
+              <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <img class="img-fluid" src="images/icon.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
+              </button>
+              <div class="collapse navbar-collapse text-center" id=navbarNavDropdown>
+                <ul class="navbar-nav mx-auto align-items-center">
+                    <li class="nav-item"><a class="nav-link" href="index-2.html">Facebook</a></li>
+                    <li class="nav-item"><a class="nav-link" href="list.html">Instagram</a></li>
+                </ul>
+                <a href="#products" class="btn btn-sm btn-outline-primary ml-lg-4">Produits</a>
+                <a href="Contact.html" class="btn btn-sm btn-outline-primary ml-lg-4">Contact</a>
+                <a href="form.html" class="btn btn-sm btn-outline-primary ml-lg-4">Commander</a>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
+              </div>
+        </nav>
 
+      
 <!-- end Header/Navbar-->
 
   <section class="section pb-0" style="background-color: #e6e6e6;">
-    <div class="container">
+    <div class="container" id="topcontainer">
       <div class="row justify-content-between align-items-center">
         <div class="col-lg-7 text-center text-lg-left">
           <h1 class="mb-4">Documentation granola.tn :</h1>
@@ -61,16 +48,47 @@
     </div>
   </section>
 
+
+
+
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="images/slide1.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="images/slide2.webp" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="images/slide3.jpg" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+
+
+
+
+
 <!--products-->
   <section class="section pb-0" id="products">
     <div class="container">
+      <br>
       <h2 class="section-title">Products</h2>
       <div class="row">
-        <!-- topic -->
+        <!-- produit 1 -->
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card match-height">
+            <img src="images/logo.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <i class="card-icon ti-panel mb-4"></i>
               <h3 class="card-title h4">Normale & Economique</h3>
               <p class="card-text">Quantité : 200g</p>
               <p class="card-text">prix : 8,5 DT</p>
@@ -78,11 +96,11 @@
             </div>
           </div>
         </div>
-        <!-- topic -->
+        <!-- produit 2 -->
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card match-height">
+            <img src="images/logo.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <i class="card-icon ti-credit-card mb-4"></i>
               <h3 class="card-title h4">Normale & Economique</h3>
               <p class="card-text">Quantité : 200g</p>
               <p class="card-text">prix : 8,5 DT</p>
@@ -90,11 +108,11 @@
             </div>
           </div>
         </div>
-        <!-- topic -->
+        <!-- produit 3 -->
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card match-height">
+            <img src="images/logo.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <i class="card-icon ti-package mb-4"></i>
               <h3 class="card-title h4">Normale & Economique</h3>
               <p class="card-text">Quantité : 200g</p>
               <p class="card-text">prix : 8,5 DT</p>
@@ -102,11 +120,11 @@
             </div>
           </div>
         </div>
-        <!-- topic -->
+        <!-- produit 4 -->
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card match-height">
+            <img src="images/logo.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <i class="card-icon ti-settings mb-4"></i>
               <h3 class="card-title h4">Normale & Economique</h3>
               <p class="card-text">Quantité : 200g</p>
               <p class="card-text">prix : 8,5 DT</p>
@@ -119,6 +137,19 @@
   </section>
   <!-- /topics -->
 
+
+
+
+  <footer class="text-muted py-5">
+    <div class="container">
+        <p class="float-end mb-1">
+          <a href="#topcontainer">Back to top</a>
+        </p>
+        <p class="mb-1">GRANOLA ça cache toujours quelque chose d'EXTRA !</p>
+        <p class="mb-0">New customer and you want to try our product!   <a href="./form.html">order your products  </a> or read our <a href="./about.html"> “Granola” advantages. </a></p>
+    </div>
+
+  </footer>
 
 
 
