--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <!-- Header/navbar -->
 	
    			<nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
+   				<div class="container">
    				
 	      			<a class="navbar-brand mb-0 h1" href="index.html">
 	      				<img class="img-fluid" src="images/logo1.png" style="max-width: 100%; max-height: 100%; display: block;" alt="godocs">
@@ -30,11 +31,10 @@
 				        <a href="./form.html" class="btn btn-sm btn-outline-primary ml-lg-4">Commander</a>
 
 		      		</div>
+		      	</div>
     		</nav>
 
 <!-- end Header/Navbar-->
-
-
 
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -78,15 +78,6 @@
 	    </div>
 	  </div>
 	</section>
-
-
-
-
-	
-
-
-
-
 
 
 <!--products-->
